crates/toml_edit/tests/snapshots/invalid/ext/datetime/month-1digit.stderr
TOML parse error at line 1, column 12
  |
1 | foo = 1997-9-09
  |            ^
invalid date-time
